--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -144,7 +144,7 @@
        "4            46  Urban  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "Name: ride_id, dtype: int64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "Name: driver_count, dtype: int64"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "Urban                   16.571468  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -417,50 +417,50 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_c290e\">\n",
+       "<table id=\"T_53851\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_c290e_level0_col0\" class=\"col_heading level0 col0\" >Total Rides</th>\n",
-       "      <th id=\"T_c290e_level0_col1\" class=\"col_heading level0 col1\" >Total Drivers</th>\n",
-       "      <th id=\"T_c290e_level0_col2\" class=\"col_heading level0 col2\" >Total Fares</th>\n",
-       "      <th id=\"T_c290e_level0_col3\" class=\"col_heading level0 col3\" >Average Fare per Ride</th>\n",
-       "      <th id=\"T_c290e_level0_col4\" class=\"col_heading level0 col4\" >Average Fare per Driver</th>\n",
+       "      <th id=\"T_53851_level0_col0\" class=\"col_heading level0 col0\" >Total Rides</th>\n",
+       "      <th id=\"T_53851_level0_col1\" class=\"col_heading level0 col1\" >Total Drivers</th>\n",
+       "      <th id=\"T_53851_level0_col2\" class=\"col_heading level0 col2\" >Total Fares</th>\n",
+       "      <th id=\"T_53851_level0_col3\" class=\"col_heading level0 col3\" >Average Fare per Ride</th>\n",
+       "      <th id=\"T_53851_level0_col4\" class=\"col_heading level0 col4\" >Average Fare per Driver</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_c290e_level0_row0\" class=\"row_heading level0 row0\" >Rural</th>\n",
-       "      <td id=\"T_c290e_row0_col0\" class=\"data row0 col0\" >125</td>\n",
-       "      <td id=\"T_c290e_row0_col1\" class=\"data row0 col1\" >78</td>\n",
-       "      <td id=\"T_c290e_row0_col2\" class=\"data row0 col2\" >$4,327.93</td>\n",
-       "      <td id=\"T_c290e_row0_col3\" class=\"data row0 col3\" >$34.62</td>\n",
-       "      <td id=\"T_c290e_row0_col4\" class=\"data row0 col4\" >$55.49</td>\n",
+       "      <th id=\"T_53851_level0_row0\" class=\"row_heading level0 row0\" >Rural</th>\n",
+       "      <td id=\"T_53851_row0_col0\" class=\"data row0 col0\" >125</td>\n",
+       "      <td id=\"T_53851_row0_col1\" class=\"data row0 col1\" >78</td>\n",
+       "      <td id=\"T_53851_row0_col2\" class=\"data row0 col2\" >$4,327.93</td>\n",
+       "      <td id=\"T_53851_row0_col3\" class=\"data row0 col3\" >$34.62</td>\n",
+       "      <td id=\"T_53851_row0_col4\" class=\"data row0 col4\" >$55.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_c290e_level0_row1\" class=\"row_heading level0 row1\" >Suburban</th>\n",
-       "      <td id=\"T_c290e_row1_col0\" class=\"data row1 col0\" >625</td>\n",
-       "      <td id=\"T_c290e_row1_col1\" class=\"data row1 col1\" >490</td>\n",
-       "      <td id=\"T_c290e_row1_col2\" class=\"data row1 col2\" >$19,356.33</td>\n",
-       "      <td id=\"T_c290e_row1_col3\" class=\"data row1 col3\" >$30.97</td>\n",
-       "      <td id=\"T_c290e_row1_col4\" class=\"data row1 col4\" >$39.50</td>\n",
+       "      <th id=\"T_53851_level0_row1\" class=\"row_heading level0 row1\" >Suburban</th>\n",
+       "      <td id=\"T_53851_row1_col0\" class=\"data row1 col0\" >625</td>\n",
+       "      <td id=\"T_53851_row1_col1\" class=\"data row1 col1\" >490</td>\n",
+       "      <td id=\"T_53851_row1_col2\" class=\"data row1 col2\" >$19,356.33</td>\n",
+       "      <td id=\"T_53851_row1_col3\" class=\"data row1 col3\" >$30.97</td>\n",
+       "      <td id=\"T_53851_row1_col4\" class=\"data row1 col4\" >$39.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_c290e_level0_row2\" class=\"row_heading level0 row2\" >Urban</th>\n",
-       "      <td id=\"T_c290e_row2_col0\" class=\"data row2 col0\" >1,625</td>\n",
-       "      <td id=\"T_c290e_row2_col1\" class=\"data row2 col1\" >2,405</td>\n",
-       "      <td id=\"T_c290e_row2_col2\" class=\"data row2 col2\" >$39,854.38</td>\n",
-       "      <td id=\"T_c290e_row2_col3\" class=\"data row2 col3\" >$24.53</td>\n",
-       "      <td id=\"T_c290e_row2_col4\" class=\"data row2 col4\" >$16.57</td>\n",
+       "      <th id=\"T_53851_level0_row2\" class=\"row_heading level0 row2\" >Urban</th>\n",
+       "      <td id=\"T_53851_row2_col0\" class=\"data row2 col0\" >1,625</td>\n",
+       "      <td id=\"T_53851_row2_col1\" class=\"data row2 col1\" >2,405</td>\n",
+       "      <td id=\"T_53851_row2_col2\" class=\"data row2 col2\" >$39,854.38</td>\n",
+       "      <td id=\"T_53851_row2_col3\" class=\"data row2 col3\" >$24.53</td>\n",
+       "      <td id=\"T_53851_row2_col4\" class=\"data row2 col4\" >$16.57</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fde789a3f70>"
+       "<pandas.io.formats.style.Styler at 0x7ff4e81479d0>"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
        "[2375 rows x 1 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
        "[2375 rows x 3 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
        "[2375 rows x 3 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
        "[2177 rows x 3 columns]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
        "[2177 rows x 3 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
        "2019-04-28  191.85   1169.04  1909.51"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1396,20 +1396,6 @@
     "\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
